--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -53,3 +53,7 @@ logging.level.com.netflix: DEBUG
 management:
   security:
     enabled: false
+
+jwt:
+  secret: SomeTextInRandom
+  expirationInMs: 5000
