--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,8 +1,4 @@
-FROM openjdk:8-jre-alpine
-ENV APP_FILE gateway-service-1.0.jar
-ENV APP_HOME /app
+FROM adoptopenjdk:8u212-b04-jre-hotspot-bionic
+COPY target/gateway-service-1.0.jar /app/app.jar
+CMD ["java", "-jar", "/app/app.jar"]
 EXPOSE 5004
-COPY target/$APP_FILE $APP_HOME/
-WORKDIR $APP_HOME
-ENTRYPOINT ["sh", "-c"]
-CMD ["exec java -jar $APP_FILE"]
