--- a/gateway-service/src/main/resources/bootstrap.yml
+++ b/gateway-service/src/main/resources/bootstrap.yml
@@ -2,14 +2,5 @@ spring:
   application:
     name: gateway-service
   cloud:
-    consul:
-      host: 192.168.100.29
-      port: 8500
-      discovery: {instance-id: '${spring.application.name}:${server.port}'}
-
-logging:
-  level:
-    org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
-
-server:
-  port: ${PORT:8080}
+    config:
+      uri: http://192.168.100.29:8801
