--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,9 @@
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
 			<url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
 		</repository>
 	</repositories>
 
